test/library/packages/Futures/futures-error-args.good
futures-error-args.chpl:3: error: async() task function provided with mismatching arguments
